Item, ItemInfo, ItemOption, ItemImage 기능 구현 완료 Controller, Service, Repository, DTO, Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=shopItem
-server.port = 8080
+server.port = 8081
 file.access-url=upload
 
 
@@ -10,7 +10,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA ?? ??
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 
